<resources>
    <string name="app_name">CriminalIntentKotlini</string>


    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="Sup">sup</string>
    <string name="description">"Once you have the date, it needs to be sent back to
        CrimeFragment. The targetFragment property stores
        the fragment instance that started your
        DatePickerFragment. Since it is nullable, you wrap it in
        a safe-call let block. You then cast the fragment instance to
        your Callbacks interface and call the
        Once you have the date, it needs to be sent back to
        CrimeFragment. The targetFragment property stores
        the fragment instance that started your
        DatePickerFragment. Since it is nullable, you wrap it in
        a safe-call let block. You then cast the fragment instance to
        your Callbacks interface and call the
        onDateSelected() function, passing in your new date."</string>

    <string name="noDate">" Undefended "</string>
    <string name="createdDate">"Create Date - "</string>
    <string name="Solved">Solved - </string>
    <string name="desc">Crime Description</string>
    <string name="LastModifed">Last Modified</string>
    <string name="suspect">Suspect - </string>
    <string name="title_activity_file_selection">FileSelection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
