<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy"
        android:icon="@android:drawable/sym_call_incoming"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_forward"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="100"
        android:title="@string/forward"
        app:showAsAction="ifRoom" />

</menu>