<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#FFAB00"
        android:alpha=".8"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_title_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/crime_title"
        style="?android:textAppearanceSearchResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha=".8"
        android:autofillHints="@string/crime_title_hint"
        android:hint="@string/crime_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crime_details_label"
        android:textColor="#FFAB00"
        android:alpha=".8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_title"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="379dp" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textColor="#D99A8863"
            android:alpha=".8"
            android:padding="10dp"
            android:text="@string/LastModifed" />

        <Button
            android:id="@+id/crime_date"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Modify Last Update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="379dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textColor="#D99A8863"
            android:alpha=".8"
            android:layout_margin="3dp"
            android:padding="10dp"
            android:text="@string/Solved" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="379dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/textView3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_margin="3dp"
               android:alpha=".8"
               android:padding="10dp"
               android:text="@string/desc"
               android:textColor="#D99A8863"
               tools:ignore="MissingConstraints" />

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="32dp"
               android:layout_marginLeft="32dp"
               android:layout_marginTop="17dp"
               android:layout_marginEnd="32dp"
               android:layout_marginRight="32dp"
               app:srcCompat="@drawable/ic_expand_more_black_24dp"
               android:layout_marginBottom="16dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toEndOf="@+id/textView3"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:cardCornerRadius="15dp"
            android:background="#25222B"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
           >

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:alpha="10"
                android:layout_margin="4dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:background="#25222B"
                    android:textSize="20dp"
                    android:text="@string/description"
                    android:layout_height="wrap_content"/>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>






    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="#E19F1A"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
